# aws-nitro-enclave-attestation

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md  justfile
.github/workflows/: release.yml
contracts/: DEPLOYMENT.md  deploy-config.json  foundry.toml
contracts/deployments/: 1.json  11155111.json  1398243.json  17000.json  31337.json  560048.json  65536.json  97.json
contracts/script/: MultiChainDeploy.s.sol  NitroEnclaveVerifier.s.sol
contracts/src/: NitroEnclaveVerifier.sol
contracts/src/interfaces/: INitroEnclaveVerifier.sol
crates/nitro-attest-cli/: Cargo.toml
crates/nitro-attest-cli/src/: debug.rs  main.rs  proof.rs  prove.rs  upload.rs  utils.rs
crates/prover/: Cargo.toml
crates/prover/src/: contract.rs  lib.rs  program.rs  program_risc0.rs  program_sp1.rs  prover.rs  risc0.rs  sp1.rs  types.rs  utils.rs
crates/risc0-methods/: Cargo.toml
crates/risc0-methods/risc0-aggregator/: Cargo.toml
crates/risc0-methods/risc0-aggregator/src/: main.rs
crates/risc0-methods/risc0-verifier/: Cargo.toml
crates/risc0-methods/risc0-verifier/src/: main.rs
crates/sp1-methods/: Cargo.toml  build.rs
crates/sp1-methods/sp1-aggregator/: Cargo.toml
crates/sp1-methods/sp1-aggregator/src/: main.rs
crates/sp1-methods/sp1-verifier/: Cargo.toml
crates/sp1-methods/sp1-verifier/src/: main.rs
crates/sp1-methods/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/abi/: NitroEnclaveVerifier.abi  gen.sh
crates/verifier/src/: cose.rs  doc.rs  lib.rs  stub.rs  verifier.rs
crates/x509-verifier-rust-crypto/: Cargo.toml
crates/x509-verifier-rust-crypto/src/: cert.rs  constants.rs  lib.rs  sign.rs
samples/: attestation_1.report  attestation_2.report  proof_risc0_aggregator_1.json  proof_risc0_aggregator_1_2.json  proof_risc0_aggregator_5.json  proof_risc0_single_1.json  proof_risc0_verifier_1.json  proof_sp1_aggregator_1_2.json  proof_sp1_aggregator_2.json  proof_sp1_aggregator_5.json  proof_sp1_single_1.json  proof_sp1_verifier_1.json  risc0_program_id.json  sp1_program_id.json
samples/proofs/: proof_risc0_aggregator_10.json  proof_risc0_aggregator_1_2.json  proof_risc0_aggregator_2.json  proof_risc0_composite_1.json  proof_risc0_verifier_1.json  proof_sp1_aggregator_1.json  proof_sp1_aggregator_10.json  proof_sp1_composite_1.json
scripts/: deploy_contract.sh  generate_deployment_summary.sh  multi_chain_deploy.sh
