[workspace]
resolver = "2"
members = [
    "crates/nitro-attest-cli",
    "crates/verifier",
    "crates/prover",
    "crates/x509-verifier-rust-crypto",
    "crates/risc0-methods",
    "crates/risc0-methods/risc0-verifier",
    "crates/risc0-methods/risc0-aggregator",
    "crates/sp1-methods",
    "crates/sp1-methods/sp1-verifier",
    "crates/sp1-methods/sp1-aggregator"
]
default-members = [
    "crates/nitro-attest-cli",
    "crates/verifier",
    "crates/prover",
    "crates/x509-verifier-rust-crypto",
    "crates/risc0-methods",
    "crates/sp1-methods",
]

[workspace.package]
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
aws-nitro-enclave-attestation-verifier = { path = "crates/verifier" }
aws-nitro-enclave-attestation-prover = { path = "crates/prover", default-features = false }
x509-verifier-rust-crypto = { path = "crates/x509-verifier-rust-crypto" }
risc0-methods = { path = "crates/risc0-methods" }
sp1-methods = { path = "crates/sp1-methods" }

clap = { version = "4.0", features = ["derive", "env"] }
anyhow = { version = "1", features = ["backtrace"] }
alloy-sol-types = "1.0"
serde_cbor = "0.11"
serde = "1.0"
byteorder = "1.3.4"
serde_with = { version = "1.9.4", default-features = false }
serde_bytes = "0.11"

risc0-zkvm = { version = "^2.1.0", default-features = false }
bonsai-sdk = { version = "1.4.0", features = ["non_blocking"] }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.1" }

sp1-zkvm = "5.0.0"
sp1-sdk = "5.0.0"
alloy-primitives = { version = "1.2" }
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.27"
bincode = "1.3.3"
serde_json = "1"
async-trait = "0.1.88"
alloy-provider = "1.0.17"
alloy-network = "1.0.17"
alloy-rpc-types = "1.0.17"
alloy-signer-local = "1.0.17"
tracing = "0.1.41"
crossbeam = "0.8.4"
lazy_static = "1.5.0"