[package]
name = "risc0-verifier"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
aws-nitro-enclave-attestation-verifier = { workspace = true, features = ["risc0"] }
hex = "0.4"
alloy-primitives = "1.2"